Fix the scroll bug on iOS

--- a/src/components/04-Components/navigation/_components.nav.css
+++ b/src/components/04-Components/navigation/_components.nav.css
@@ -9,6 +9,8 @@
   @apply
     overflow-y-hidden
   ;
+
+  touch-action: none;
 }
 
 /* -----------------------------------
